add map to ipynb

--- a/CarEstimator.ipynb
+++ b/CarEstimator.ipynb
@@ -78,6 +78,10 @@
     "    return np.array(data), np.array(labels), np.array(bboxes)\n",
     "\n",
     "\n",
+    "def map_angle_to_0_360(angle):\n",
+    "    return angle % 360\n",
+    "\n",
+    "\n",
     "def load_data():\n",
     "    file_path = r'./data/epfl-gims08/tripod-seq/tripod-seq.txt'\n",
     "    base_path = r'./data/epfl-gims08/tripod-seq'\n",
@@ -94,6 +98,9 @@
     "    test_images, test_labels, test_bboxes = load_and_preprocess_data(\n",
     "        base_path, test_sequence_ids, img_width, img_height, num_frames[10:], frames_360[10:], frontal_frames[10:],\n",
     "        rotation_sense[10:])\n",
+    "    \n",
+    "    train_labels = [map_angle_to_0_360(angle) for angle in train_labels]\n",
+    "    test_labels = [map_angle_to_0_360(angle) for angle in test_labels]\n",
     "\n",
     "    return train_images, train_labels, train_bboxes, test_images, test_labels, test_bboxes\n"
    ]
