--- a/CarEstimator.ipynb
+++ b/CarEstimator.ipynb
@@ -158,12 +158,35 @@
     "    def __init__(self):\n",
     "        super(AnglePredictor, self).__init__()\n",
     "        self.resnet_model = models.resnet50(pretrained=True)\n",
-    "        self.resnet_model = nn.Sequential(*list(self.resnet_model.children())[:-1])\n",
-    "        self.regression_head = nn.Linear(2048, 1)\n",
+    "\n",
+    "        # Freeze all layers first\n",
+    "        for param in self.resnet_model.parameters():\n",
+    "            param.requires_grad = False\n",
+    "\n",
+    "        # Unfreeze the last 15 layers\n",
+    "        num_layers = len(list(self.resnet_model.children()))\n",
+    "        layers_to_unfreeze = list(self.resnet_model.children())[num_layers - 15:]\n",
+    "        for layer in layers_to_unfreeze:\n",
+    "            for param in layer.parameters():\n",
+    "                param.requires_grad = True\n",
+    "\n",
+    "        # Modify the ResNet model to not include the final fully connected layer\n",
+    "        self.features = nn.Sequential(*list(self.resnet_model.children())[:-1])\n",
+    "\n",
+    "        # Expanded regression head\n",
+    "        self.regression_head = nn.Sequential(\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(2048, 512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(0.3),\n",
+    "            nn.Linear(512, 512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(0.3),\n",
+    "            nn.Linear(512, 1)  # Outputting a single value for angle\n",
+    "        )\n",
     "\n",
     "    def forward(self, pixel_values):\n",
-    "        features = self.resnet_model(pixel_values)\n",
-    "        features = features.view(features.size(0), -1)\n",
+    "        features = self.features(pixel_values)\n",
     "        angle = self.regression_head(features)\n",
     "        return angle\n",
     "\n",
